[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.12.1"
actix-ws = "0.3.1"
bytes = "1.11.0"
futures-util = "0.3.31"
hex = "0.4.3"
md5 = "0.8.0"
parking_lot = "0.12.5"
reqwest = { version = "0.13.1", features = ["json", "zstd", "gzip", "brotli", "query"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.128"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
