[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
actix-rt = "2.11.0"
actix-web = "4.12.1"
actix-ws = "0.3.1"
bytes = "1.11.0"
futures-util = "0.3.31"
hex = "0.4.3"
md5 = "0.8.0"
parking_lot = "0.12.5"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "zstd", "gzip", "brotli", "query", "multipart"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.128"
sea-orm = { version = "2.0.0-rc.30", features = [ "sqlx-postgres", "runtime-tokio", "macros" ] }
tokio = { version = "1.49.0", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
anyhow = "1.0.100"
sea-orm-migration = { version = "2.0.0-rc.30", features = ["sqlx-postgres", "runtime-tokio"] }
