[package]
edition      = "2021"
name         = "migration"
publish      = false
version      = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
features = [
    "runtime-tokio",
    "sqlx-postgres",
    "runtime-async-std-native-tls"
]
version = "2.0.0-rc.30"
